[tool.poetry]
name = "briefmetrics"
version = "2.1.0"
description = ""
authors = ["Andrey Petrov <andrey.petrov@shazow.net>"]

[tool.poetry.dependencies]
python = "^3.9"
celery = {version = "^4", extras = ["sqlalchemy"]} # Need pre-release for broken py38
kombu = "^4.6"
sqlalchemy = "^1.3"
PyJWT = "^1"
Mako = "^1.1"
WebTest = "^2.0"
alembic = "^1.2"
"dogpile.cache" = "^0.8.0"
mock = "^3.0"
oauthlib = "^3.2"
pillow = "^9"
pyramid = "^2"
pyramid_beaker = "^0.8.0"
pyramid_debugtoolbar = "^4.5"
pyramid_exclog = "^1"
pyramid_handlers = "^0.5.0"
pyramid_mailer = "^0.15.1"
pyramid_mako = "^1"
python-dateutil = "^2.8"
pytz = "^2022"
pyyaml = "^6"
requests-hawk = "^1"
requests-oauthlib = "^1"
requests = "^2"
stripe = "^2"
unstdlib = "^1.7"
premailer = "^3.6"
html2text = "^2019.9"
msgpack-python = "^0.5.6"
billiard = "^3"
PasteDeploy = "^2.0.1"
setuptools = "^60"

[tool.poetry.dev-dependencies]
IPython = "^8"
pyramid_ipython = "^0.2"
coverage = "^6"
nose = "^1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
